--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -3,5 +3,8 @@ pkgdown: 2.0.7
 pkgdown_sha: ~
 articles:
   DarterTutorial: DarterTutorial.html
-last_built: 2023-11-14T20:25Z
+last_built: 2023-11-22T18:32Z
+urls:
+  reference: https://evanaselja.github.io/darter.pkg/reference
+  article: https://evanaselja.github.io/darter.pkg/articles
 
